@@ -25,6 +25,9 @@ cdebconf (0.76) UNRELEASED; urgency=low
       dynamically in slang frontend, fixing a crash bug.
     - Set up slang select/multiselect windows so that the first selected
       option is always visible (closes: #183541).
+    - Improve how titles are displayed in the text frontend: set titles off
+      with an underline, and only display a title if it's different from the
+      previous one (closes: #281395).
   * Matthias Urlichs:
     - Clarify ANS: lines in test.config output.
     - Set _cmdline::frontend rather than frontend::default::driver in
